--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -1,109 +1,98 @@
-    {
-    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-    "version": 1,
-    "newProjectRoot": "projects",
-    "projects": {
-        "HopeEvents-2.0-front": {
-        "projectType": "application",
-        "schematics": {},
-        "root": "",
-        "sourceRoot": "src",
-        "prefix": "app",
-        "architect": {
-            "build": {
-            "builder": "@angular-devkit/build-angular:browser",
-            "options": {
-                "outputPath": "dist/hope-events-2.0-front",
-                "index": "src/index.html",
-                "main": "src/main.ts",
-                "polyfills": [
-                "zone.js"
-                ],
-                "tsConfig": "tsconfig.app.json",
-                "assets": [
-                "src/favicon.ico",
-                "src/assets"
-                ],
-                "styles": [
-                "src/styles.css",
-                "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                "node_modules/animate.css/animate.min.css"
-                ],
-                "scripts": [
-                    "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-                    "node_modules/boxicons/dist/boxicons.js"
-
-                ]
-            },
-            "configurations": {
-                "production": {
-                "budgets": [
-                    {
-                    "type": "initial",
-                    "maximumWarning": "500kb",
-                    "maximumError": "1mb"
-                    },
-                    {
-                    "type": "anyComponentStyle",
-                    "maximumWarning": "2kb",
-                    "maximumError": "4kb"
-                    }
-                ],
-                "outputHashing": "all"
+{
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "version": 1,
+  "newProjectRoot": "projects",
+  "projects": {
+    "HopeEvents-2.0-front": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "",
+      "sourceRoot": "src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/hope-events-2.0-front",
+            "index": "src/index.html",
+            "main": "src/main.ts",
+            "polyfills": ["zone.js"],
+            "tsConfig": "tsconfig.app.json",
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": [
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/animate.css/animate.min.css",
+              "node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
+              "node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
+              "node_modules/swiper/swiper-bundle.min.css"
+            ],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/boxicons/dist/boxicons.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/owl.carousel/dist/owl.carousel.min.js"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
                 },
-                "development": {
-                "buildOptimizer": false,
-                "optimization": false,
-                "vendorChunk": true,
-                "extractLicenses": false,
-                "sourceMap": true,
-                "namedChunks": true
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
                 }
+              ],
+              "outputHashing": "all"
             },
-            "defaultConfiguration": "production"
-            },
-            "serve": {
-            "builder": "@angular-devkit/build-angular:dev-server",
-            "configurations": {
-                "production": {
-                "browserTarget": "HopeEvents-2.0-front:build:production"
-                },
-                "development": {
-                "browserTarget": "HopeEvents-2.0-front:build:development"
-                }
-            },
-            "defaultConfiguration": "development"
-            },
-            "extract-i18n": {
-            "builder": "@angular-devkit/build-angular:extract-i18n",
-            "options": {
-                "browserTarget": "HopeEvents-2.0-front:build"
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
             }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "HopeEvents-2.0-front:build:production"
             },
-            "test": {
-            "builder": "@angular-devkit/build-angular:karma",
-            "options": {
-                "polyfills": [
-                "zone.js",
-                "zone.js/testing"
-                ],
-                "tsConfig": "tsconfig.spec.json",
-                "assets": [
-                "src/favicon.ico",
-                "src/assets"
-                ],
-                "styles": [
-                "src/styles.css"
-                ],
-                "scripts": [
-
-                ]
+            "development": {
+              "browserTarget": "HopeEvents-2.0-front:build:development"
             }
-            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "HopeEvents-2.0-front:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "polyfills": ["zone.js", "zone.js/testing"],
+            "tsConfig": "tsconfig.spec.json",
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.css"],
+            "scripts": []
+          }
         }
-        }
-    },
-    "cli": {
-        "analytics": "7a62ccc2-0479-44fc-889f-a471791c0977"
+      }
     }
-    }
+  },
+  "cli": {
+    "analytics": "7a62ccc2-0479-44fc-889f-a471791c0977"
+  }
+}
