--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
         "@angular-devkit/build-angular": "^16.0.3",
         "@angular/cli": "~16.0.3",
         "@angular/compiler-cli": "^16.0.0",
+        "@types/bootstrap": "^5.2.6",
         "@types/hammerjs": "^2.0.41",
         "@types/jasmine": "~4.3.0",
         "jasmine-core": "~4.6.0",
