--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
         "ngx-owl-carousel-o": "^16.0.0",
         "owl.carousel": "^2.3.4",
         "rxjs": "~7.8.0",
+        "sweetalert2": "^11.7.12",
         "swiper": "^9.4.1",
         "tslib": "^2.3.0",
         "zone.js": "~0.13.0"
